restructured dpr table fixed missing padding-top on the table

--- a/src/app/modules/it-systems/it-system-usages/it-system-usage-details/it-system-usage-details-data-processing/it-system-usage-details-data-processing.component.scss
+++ b/src/app/modules/it-systems/it-system-usages/it-system-usage-details/it-system-usage-details-data-processing/it-system-usage-details-data-processing.component.scss
@@ -8,6 +8,7 @@
 
 table {
   width: 100%;
+  padding-top: $padding-small;
 
   thead {
     th {
